# wwn_api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dev.rs  ittest.rs  lib.rs  main.rs  static_controller.rs  static_metadata.rs  utils.rs
src/analytics/: geographic.rs  mod.rs
src/api/: api_error.rs  auth.rs  geo.rs  internal_structs.rs  jobs.rs  mod.rs  request.rs  shared_api_metadata_struct.rs  static_metadata.rs  utils.rs
src/api/internal/: mod.rs  observation.rs  parameter.rs  parameter_metadata.rs  river.rs  service_metadata.rs  station.rs
src/api/nve/: mod.rs  nve_connect.rs  nve_persistance.rs  nve_requests.rs  observation.rs  station.rs
src/api/nve/historic_data/: 1.15.0_1000_0.json  1.15.0_1000_1440.json  1.15.0_1000_60.json  1.15.0_1004_0.json  1.15.0_1004_1440.json  1.15.0_1004_60.json  1.200.0_1000_1440.json  1.200.0_1001_1440.json  (+47 more)
src/api/serde/: deserializor.rs  mod.rs
src/api/smih/: observation_data.rs  smih_request.rs
src/api/uk/: mod.rs  observation.rs  requests.rs  station.rs
src/data/: api_error.rs  mod.rs
src/data/internal/: mod.rs  observation.rs  parameter.rs  parameter_metadata.rs  river.rs  service_metadata.rs  station.rs  timeseries.rs  timeseries_metadata.rs
src/data/nve/: connect.rs  mod.rs  nve_connect.rs  nve_requests.rs  observation.rs  requests.rs  station.rs
src/data/smih/: mod.rs  observation_data.rs  period.rs  request.rs  smih_request.rs  station_and_recent_observations.rs
src/data/uk/: mod.rs  observation.rs  requests.rs  station.rs
src/db/: error.rs  mod.rs  tables.rs
src/db/config/: mod.rs
src/db/persistence/: init_historic_data_calulations.rs  init_static_data_db.rs  mod.rs
src/db/queries/: generics.rs  mod.rs  stations.rs
src/persistence/: connection.rs  db.rs  db_structure.rs  error.rs  init_db.rs  init_historic_data_calulations.rs  init_static_data_db.rs  mod.rs  observation_data.rs  queries.rs  tables.rs
src/persistence/db/: auth.rs
src/surreal_query_builder/: Cargo.toml
src/util/: mod.rs  time.rs
src/util/analytics/: historic_statistics.rs  mod.rs  statistics.rs
src/util/geo/: location.rs  mod.rs  position.rs
(+16 files in other folders)
