[package]
name = "wwn_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version =  "1.0.75", features = ["backtrace"] }
chrono = { version = "0.4.31", features = ["serde"] }
envy = "0.4.2"
haversine = "0.2.1"
http = "1.0.0"
reqwest = {version =  "0.11.22", features = ["json", "serde_json", "blocking"] }
serde = {version =  "1.0.192", features = ["derive", "serde_derive", "std"] }
serde_json = {version =  "1.0.108" }
thiserror = "1.0.50"
tokio = {version =  "1.34.0", features = ["fs", "macros", "test-util", "tracing"] }

url = "2.4.1"
warp = "0.3.6"
futures = "0.3.29"

[dev-dependencies]
