[package]
name = "wwn_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tokio = { version = "1.34.0", features = ["fs", "macros", "test-util", "tracing", "rt-multi-thread", "full"] }
console-subscriber = "0.1.5"

thiserror = "1.0.50"
anyhow = { version =  "1.0.75", features = ["backtrace"] }

envy = "0.4.2"
haversine = "0.2.1"

http = "1.0.0"
reqwest = {version =  "0.11.22", features = ["json", "serde_json", "blocking"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = {version =  "1.0.192", features = ["derive", "serde_derive", "std"] }
serde_json = {version =  "1.0.108" }
csv-async = { version = "1.2.6", features = ["tokio"] }

url = "2.4.1"
warp = "0.3.6"
futures = "0.3.29"
surrealdb = "1.0.0"
itertools = "0.12.0"
ordered-float = "4.1.1"
phf = { features = ["serde", "macros"], version = "0.11.2", default-features = false }
derive_builder = { version = "0.12.0", features = ["clippy"]}
serde_with = { version = "3.4.0", features = ["chrono", "json", ] }
serde_string_enum = "0.2.1"

strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.3"


[dev-dependencies]
